fixed overlapping search bar

--- a/react-app/src/components/auth/LoginForm/LoginForm.css
+++ b/react-app/src/components/auth/LoginForm/LoginForm.css
@@ -1,7 +1,4 @@
-.loginModalWrapper {
-    position: absolute;
-    z-index: 5;
-}
+
 
 .LoginModalContainer{
     background-color: #fff;
